# Game

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/myShader/: shader.fs  shader.vs
include/glad/: glad.h
src/: glad.c  main.cpp
src/engine_src/camera/: Camera.cpp  Camera.hpp
src/engine_src/gameobj/: GameObject.hpp
src/engine_src/shader/: Shader.cpp  Shader.hpp
src/engine_src/texture/: Texture.cpp  Texture.hpp
src/engine_src/window/: Window.cpp  Window.hpp
src/game_src/game/: Game.cpp  Game.hpp
src/game_src/playercam/: PlayerCam.cpp  PlayerCam.hpp
